--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h3>That's very exciting!</h3>
             </div>
             <div class="stans-styles">
-                <h3>Github isn't easy!</h3>
+                <h3>Github isn't easy, and it is fun!</h3>
             </div>
         </section>
     </main>
